# pyaco

./: .gitignore  README.md  pyproject.toml  requirements.txt
pyaco/: __main__.py  ant.py  colony.py  window.py
src/: __main__.py
